--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
@@ -15,4 +15,25 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country-info--info {
+  /* color: blue; */
+  font-size: 30px;
+}
+
+.image-size {
+  width: 50px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+.span-info {
+  color: blue;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.list {
+  color: green;
 }
