--- a/src/templates/one-country-markup.hbs
+++ b/src/templates/one-country-markup.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 
 <div class="country-info">
-    <p class="country-info--info"><img src="{{flag}}" alt="flag of {{name}}" class="image-size">{{name}}</p>
+    <p class="country-info--info name"><img src="{{flag}}" alt="flag of {{name}}" class="image-size">{{name}}</p>
     <p class="country-info--info"><span class="span-info">Capital:</span> {{capital}}</p>
     <p class="country-info--info"><span class="span-info">Population:</span> {{population}}</p>
     <p class="country-info--info"><span class="span-info">Languages:</span> </p>
