--- a/src/templates/one-country-markup.hbs
+++ b/src/templates/one-country-markup.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 
-<div class="country-info">
+{{!-- <div class="country-info"> --}}
     <p class="country-info--info name"><img src="{{flag}}" alt="flag of {{name}}" class="image-size">{{name}}</p>
     <p class="country-info--info"><span class="span-info">Capital:</span> {{capital}}</p>
     <p class="country-info--info"><span class="span-info">Population:</span> {{population}}</p>
@@ -11,6 +11,6 @@
         <li class="list">{{name}}</li>
         {{/each}}
     </ul>
-</div>
+{{!-- </div> --}}
 
 {{/each}}
