--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,12 +5,14 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #fafafa;
+  background-color: #f3f053;
   color: #212121;
   line-height: 1.5;
 }
 
 #search-box {
+  display: block;
+  margin: 0 auto;
   font: inherit;
   padding: 8px;
   max-width: 320px;
@@ -24,12 +26,17 @@ body {
 }
 
 .country-info {
+  text-align: center;
   background-color: aqua;
+  /* border: 2px solid #1302ff; */
+  border-radius: 5px;
 }
 
 .country-list {
   background-color: grey;
   margin: 0px;
+  /* border: 1px solid #1302ff; */
+  border-radius: 5px;
 }
 
 .name {
@@ -58,5 +65,9 @@ ul {
 
 .country-info--list {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
+}
+
+.title {
+  text-align: center;
 }
